--- a/model/topmodel.config
+++ b/model/topmodel.config
@@ -18,9 +18,11 @@ javascript:
     apiClientFilePath: "{module:head}"
     apiMode: angular
     resourceRootPath: locale
-    domainPath: ./domains
+    domainPath: "@domains"
     fetchPath: ./server
+    entityMode: focus
     extendedCompositions: true
+    entityTypesPath: "@focus4/entities"
 sql:
   - tags:
       - persist
