Ajout authentification avec Keycloak

--- a/model/topmodel.config
+++ b/model/topmodel.config
@@ -9,6 +9,7 @@ jpa:
     outputDirectory: ../sources/backend/src/main
     apiGeneration: Server
     metaModel: true
+    daosPath: "java:{app:path}/daos/{module}"
     resourcesPath: "resources/locale"
 javascript:
   - tags: [front]
