--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,8 @@
 {
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
-  "recommendations": ["angular.ng-template", "JabX.topmodel"]
+  "recommendations": [
+    "angular.ng-template",
+    "JabX.topmodel",
+    "firefox-devtools.vscode-firefox-debug"
+  ]
 }
