--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
   "configurations": [
     {
       "name": "ng serve",
-      "type": "chrome",
+      "type": "firefox",
       "request": "launch",
       "preLaunchTask": "npm: start",
       "url": "http://localhost:4200/",
@@ -12,7 +12,7 @@
     },
     {
       "name": "ng test",
-      "type": "chrome",
+      "type": "firefox",
       "request": "launch",
       "preLaunchTask": "npm: test",
       "url": "http://localhost:9876/debug.html"
