--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -10,3 +10,30 @@ services:
       - POSTGRES_DB=asta
     volumes:
       - ./db/init:/docker-entrypoint-initdb.d
+  user-db:
+    image: postgres:latest
+    ports:
+      - 5433:5432
+    environment:
+      - POSTGRES_PASSWORD=asta
+      - POSTGRES_USER=asta
+      - POSTGRES_DB=asta
+  auth:
+    image: keycloak/keycloak:latest
+    ports:
+      - 8090:8080
+    environment:
+      - KC_BOOTSTRAP_ADMIN_USERNAME=admin
+      - KC_BOOTSTRAP_ADMIN_PASSWORD=asta
+      - DB_VENDOR=postgres
+      - DB_ADDR=user-db
+      - DB_PORT=5432
+      - DB_DATABASE=asta
+      - DB_SCHEMA=asta
+      - DB_USER=asta
+      - DB_PASSWORD=asta
+      - HOSTNAME=localhost
+      - IMPORT_REALM=true
+    command: start-dev --import-realm
+    volumes:
+      - ./auth/:/opt/keycloak/data/import
