--- a/sources/frontend/package.json
+++ b/sources/frontend/package.json
@@ -23,17 +23,18 @@
   "private": true,
   "packageManager": "npm@11.4.2",
   "dependencies": {
-    "@angular/common": "^21.0.0",
-    "@angular/compiler": "^21.0.0",
-    "@angular/core": "^21.0.0",
-    "@angular/forms": "^21.0.0",
-    "@angular/platform-browser": "^21.0.0",
-    "@angular/router": "^21.0.0",
-    "@focus4/entities": "^12.7.0",
-    "ngx-focus-entities": "^21.0.0",
+    "@angular/common": "21.0.3",
+    "@angular/compiler": "21.0.3",
+    "@angular/core": "21.0.3",
+    "@angular/forms": "21.0.3",
+    "@angular/platform-browser": "21.0.3",
+    "@angular/router": "21.0.3",
+    "@focus4/entities": "12.7.0",
+    "angular-oauth2-oidc": "20.0.2",
+    "ngx-focus-entities": "21.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zod": "^4.1.13"
+    "zod": "4.1.13"
   },
   "devDependencies": {
     "@angular/build": "^21.0.1",
