--- a/sources/frontend/angular.json
+++ b/sources/frontend/angular.json
@@ -24,9 +24,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ]
+            "styles": ["src/styles.css"]
           },
           "configurations": {
             "production": {
@@ -59,7 +57,8 @@
               "buildTarget": "asta-starter-kit:build:production"
             },
             "development": {
-              "buildTarget": "asta-starter-kit:build:development"
+              "buildTarget": "asta-starter-kit:build:development",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
