--- a/sources/frontend/package.json
+++ b/sources/frontend/package.json
@@ -23,10 +23,12 @@
   "private": true,
   "packageManager": "npm@11.4.2",
   "dependencies": {
+    "@angular/cdk": "^21.0.2",
     "@angular/common": "21.0.3",
     "@angular/compiler": "21.0.3",
     "@angular/core": "21.0.3",
     "@angular/forms": "21.0.3",
+    "@angular/material": "^21.0.2",
     "@angular/platform-browser": "21.0.3",
     "@angular/router": "21.0.3",
     "@focus4/entities": "12.7.0",
