Implémentation Backend Profil

--- a/model/topmodel.config
+++ b/model/topmodel.config
@@ -3,6 +3,7 @@
 app: KleeContrib.Asta
 i18n:
   translateReferences: false
+  translateProperties: false
 pluralizeTableNames: true
 jpa:
   - tags: [back, commands, queries, api-commands]
