--- a/sources/frontend/package.json
+++ b/sources/frontend/package.json
@@ -29,6 +29,7 @@
     "@angular/core": "21.0.3",
     "@angular/forms": "21.0.3",
     "@angular/material": "^21.0.2",
+    "@angular/material-luxon-adapter": "^21.0.2",
     "@angular/platform-browser": "21.0.3",
     "@angular/router": "21.0.3",
     "@focus4/entities": "12.7.0",
