--- a/sources/backend/src/main/resources/application.yml
+++ b/sources/backend/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: asta-starter-kit
   sql:
     init:
       platform: postgresql
@@ -42,3 +44,14 @@ auth:
 server:
   servlet:
     contextPath: /asta
+logging:
+  structured:
+    format:
+      console: ecs
+    json:
+      exclude: log.level
+      add:
+        lvl: "${event:level}"
+      rename:
+        log.level: level0
+        log.logger: java.logger_category
