Externalisation de la configuration de l'issuer

--- a/sources/backend/src/main/resources/application.yml
+++ b/sources/backend/src/main/resources/application.yml
@@ -41,6 +41,7 @@ spring:
 auth:
   issuer: http://localhost:8090/realms/asta
   clientId: asta
+  requireHttps: false
 server:
   servlet:
     contextPath: /asta
