--- a/sources/frontend/package.json
+++ b/sources/frontend/package.json
@@ -34,15 +34,18 @@
     "@angular/router": "21.1.3",
     "@focus4/entities": "12.7.0",
     "angular-oauth2-oidc": "20.0.2",
-    "ngx-focus-entities": "21.1.2",
+    "luxon": "^3.7.2",
+    "ngx-focus-entities": "21.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "update": "^0.7.4",
     "zod": "4.1.13"
   },
   "devDependencies": {
     "@angular/build": "^21.1.3",
     "@angular/cli": "^21.1.3",
     "@angular/compiler-cli": "^21.1.3",
+    "@types/luxon": "^3.7.1",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
